[package]
name = "newt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.28.1", features = ["bitcoinconsensus"] }
hex = {version = "0.4.3"}
permute = "0.1.0"
clap = { version = "3.1.18", features = ["derive"] }